@@ -242,6 +242,7 @@ Version 1.5.2 - SVN
     patch by Walter Huijbers (#1833123).
   - Fix for IMAP servers that were having problems saving sent messages
   - Added multiple select folder list option widgets (SMOPT_TYPE_FLDRLIST_MULTI).
+  - Added "Secured Configuration" mode.
 
 
 Version 1.5.1 (branched on 2006-02-12)
